--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>8bitwallet</title>
+    <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
+    <link href="https://unpkg.com/nes.css/css/nes.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+    <title>8bitWallet</title>
   </head>
+
+  <!-- base style -->
+  <style>
+    html, body, pre, code, kbd, samp {
+      font-family: "Press Start 2P";
+      font-size: 16px;
+    }
+    body {
+      margin: 20px;
+      padding: 10px;
+    }
+    div {
+      margin: 3px;
+      padding: 3px;
+    }
+  </style>
+
   <body>
-    <noscript>
-      <strong>We're sorry but 8bitwallet doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
